Create customer details page and customer directories

--- a/src/main/resources/templates/admin-create-account.html
+++ b/src/main/resources/templates/admin-create-account.html
@@ -91,7 +91,6 @@
         cursor: pointer;
     }
 
-    /* 🔥 SCROLLABLE FORM AREA */
     .form-scroll {
         flex: 1;
         overflow-y: auto;
@@ -179,7 +178,7 @@
     </form>
   </div>
 
-  
+
   <form th:action="@{/admin/create-account}" method="post" class="form-scroll">
     <input type="text" name="fullName" placeholder="Full Name" class="input-field">
     <input type="text" name="username" placeholder="Login Username" class="input-field">
@@ -194,7 +193,7 @@
   </form>
 
   <div class="footer">
-    © 2026 Velocity Bank. All rights reserved
+    © 2026 Velocity Bank. All rights reserved.
   </div>
 
 </div>
